--- a/src/css/Portfolio.scss
+++ b/src/css/Portfolio.scss
@@ -31,14 +31,43 @@ $line-gap: 12px;
     color: #333;
   }  
   .project-content .hed {
-    padding: 16px 0px;
+    padding-top: 16px;
     font-size: 20px;
+    cursor: pointer;
   }  
   .project-content img {
+    padding-top: 20px;
     width: 100%;
     cursor:pointer;
     // height: 100%;
   }  
+  .project-content img:hover {
+    // width: 80%;
+    transform: rotate(5deg);
+    transition: all .3s;
+  }
+
+  .desc {
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height:0px;
+    transition: height 300ms;
+  }
+  .showDesc {
+    height: 100px;
+    padding-top: 16px;
+    opacity: 1;
+  }
+
+  .arrow {
+    cursor: pointer;
+    display: inline-block;
+    transition: all .3s;
+  }
+  .rotateArrow {
+    transform: rotate(90deg);
+  }
 
   @media (max-width: 1000px) {
     width: calc(50% - 2px);
