--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import "./Consts.scss";
 
 body {
   /* font-family: "Roboto", sans-serif; */
@@ -8,11 +9,12 @@ body {
 
 .intro-text {
   position: relative;
-  font-size: 54px;
+  font-size: 52px;
   font-weight: 300;
-  max-width: 840px;
-  margin-top: 150px;
-  margin-bottom: 150px;
+  max-width: $pg-lg;
+  margin-top: 140px;
+  margin-bottom: 140px;
+  // background-color: red;
 
   margin-left: auto;
   margin-right: auto;
@@ -22,18 +24,23 @@ body {
     font-weight: 600;
   }
 
-  @media (max-width: 1000px) {
-    font-size: 50px;
+  @media (max-width: $width-lg) {
+    font-size: 48px;
   }
-  @media (max-width: 800px) {
+  @media (max-width: $width-md) {
       font-size: 43px;
       margin-top: 110px;
     margin-bottom: 110px;
   }
-  @media (max-width: 500px) {
+  @media (max-width: $width-sm) {
     font-size: 40px;
     margin-top: 110px;
-  margin-bottom: 110px;
+    margin-bottom: 110px;
+  }
+  @media (max-width: $width-xs) {
+    font-size: 38px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 }
 
@@ -43,13 +50,14 @@ body {
   position: relative;
   width: 100%;
   left: 0px;
-  height: 160px;
+  height: 200px;
   bottom: 0px;
   margin: 0px;
-  padding-top: 80px;
+  margin-top: 80px;
 }
 .footer > .footer-social {
   max-width: 330px;
+  // background-color: red;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -58,7 +66,11 @@ body {
 }
 .footer-social > .social {
   font-weight: 500;
-  font-size: 17px;
+  font-size: 16px;
   border-bottom: 2px solid #333;
   cursor: pointer;
+}
+.footer-social > .social:hover {
+  color: blue;
+  border-color: blue;
 }
