project desc added

--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -13,6 +13,8 @@
     font-size: 17px;
     line-height: 27px;
     padding: 20px;
+
+    @media (max-width: $width-sm) { line-height: 26px;}
    
     a {
         color: blue;
