--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -28,19 +28,19 @@ body {
     font-size: 48px;
   }
   @media (max-width: $width-md) {
-      font-size: 43px;
+      font-size: 42px;
       margin-top: 110px;
     margin-bottom: 110px;
   }
   @media (max-width: $width-sm) {
-    font-size: 40px;
-    margin-top: 110px;
-    margin-bottom: 110px;
+    font-size: 33px;
+    margin-top: 70px;
+    margin-bottom: 70px;
   }
   @media (max-width: $width-xs) {
-    font-size: 38px;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    font-size: 32px;
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 }
 
@@ -56,7 +56,7 @@ body {
   margin-top: 80px;
 }
 .footer > .footer-social {
-  max-width: 330px;
+  max-width: 300px;
   // background-color: red;
   margin-left: auto;
   margin-right: auto;
@@ -69,8 +69,18 @@ body {
   font-size: 16px;
   border-bottom: 2px solid #333;
   cursor: pointer;
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
 }
 .footer-social > .social:hover {
   color: blue;
   border-color: blue;
+
+  a {
+    text-decoration: none;
+    color: blue;
+  }
 }
