--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
-    margin-bottom: 120px;
+    margin-bottom: 60px;
 
     // background-color: red;
     font-size: 17px;
@@ -17,9 +17,14 @@
     @media (max-width: $width-sm) { line-height: 26px;}
    
     a {
-        color: blue;
+        // color: blue;
+        font-weight: 600;
+        color: black;
         text-decoration: none;
         // border-bottom: 2px solid black;
+    }
+    a:hover {
+        color: blue;
     }
 }
 
