--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -50,10 +50,12 @@ body {
   position: relative;
   width: 100%;
   left: 0px;
-  height: 200px;
+  height: 180px;
   bottom: 0px;
   margin: 0px;
-  margin-top: 80px;
+  margin-top: 40px;
+  background-color: #f7f7f7;
+  padding-top: 40px;
 }
 .footer > .footer-social {
   max-width: 300px;
@@ -66,7 +68,7 @@ body {
 }
 .footer-social > .social {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 17px;
   border-bottom: 2px solid #333;
   cursor: pointer;
   a {
