--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -50,15 +50,16 @@ body {
   position: relative;
   width: 100%;
   left: 0px;
-  height: 180px;
+  height: 130px;
   bottom: 0px;
   margin: 0px;
-  margin-top: 40px;
+  margin-top: 85px;
   background-color: #f7f7f7;
-  padding-top: 40px;
+  padding-top: 30px;
+  // border-top: 1px solid #333;
 }
 .footer > .footer-social {
-  max-width: 300px;
+  max-width: 280px;
   // background-color: red;
   margin-left: auto;
   margin-right: auto;
@@ -68,7 +69,7 @@ body {
 }
 .footer-social > .social {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 15px;
   border-bottom: 2px solid #333;
   cursor: pointer;
   a {
