--- a/src/css/Consts.scss
+++ b/src/css/Consts.scss
@@ -3,6 +3,7 @@ $width-lg: 1000px;
 $width-md: 800px;
 $width-sm: 500px;
 $width-xs: 320px;
+$width-xxs: 280px;
 
 // Paragraph width
 $pg-xlg: 1300px;
