--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -42,6 +42,11 @@ body {
     margin-top: 60px;
     margin-bottom: 60px;
   }
+  @media (max-width: $width-xxs) {
+    font-size: 28px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
 }
 
 
@@ -66,6 +71,12 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  @media (max-width: $width-sm) {
+    max-width: 240px;
+  }
+  @media (max-width: $width-xxs) {
+    max-width: 220px;
+  }
 }
 .footer-social > .social {
   font-weight: 500;
@@ -76,7 +87,12 @@ body {
     text-decoration: none;
     color: black;
   }
-  
+  @media (max-width: $width-sm) {
+    font-size: 14px;
+  }
+  @media (max-width: $width-xxs) {
+    font-size: 13px;
+  }
 }
 .footer-social > .social:hover {
   color: blue;
