--- a/src/css/Portfolio.scss
+++ b/src/css/Portfolio.scss
@@ -30,11 +30,20 @@ $line-gap: 12px;
     padding: 7px 0px;
     font-size: 13px;
     color: #333;
+    @media (max-width: $width-xxs) {
+      font-size: 12px;
+    }
   }  
   .project-content .hed {
     padding-top: 16px;
     font-size: 20px;
     cursor: pointer;
+    @media (max-width: $width-xs) {
+      font-size: 18px;
+    }
+    @media (max-width: $width-xxs) {
+      font-size: 17px;
+    }
   } 
   .project-content .hed:hover {
     span {
@@ -42,7 +51,7 @@ $line-gap: 12px;
       transition: all 100ms;
   
       .arrow {
-        margin-left: 8px;
+        // margin-left: 8px;
         transition: all 100ms;
       }
     }  
