--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -5,6 +5,8 @@ body {
   /* font-family: "Roboto", sans-serif; */
   font-family: "Inter", sans-serif;
   margin: 0px;
+
+  // @extend .selection-color-update;
 }
 
 .intro-text {
@@ -28,8 +30,8 @@ body {
     font-size: 48px;
   }
   @media (max-width: $width-md) {
-      font-size: 42px;
-      margin-top: 110px;
+    font-size: 42px;
+    margin-top: 110px;
     margin-bottom: 110px;
   }
   @media (max-width: $width-sm) {
@@ -49,19 +51,18 @@ body {
   }
 }
 
-
 /* FOOTER */
 .footer {
   position: relative;
   width: 100%;
   left: 0px;
-  height: 130px;
+  height: 140px;
   bottom: 0px;
   margin: 0px;
   margin-top: 100px;
-  background-color: #f7f7f7;
-  padding-top: 30px;
-  // border-top: 1px solid #333;
+  // background-color: #f7f7f7;
+  padding-top: 10px;
+  // border-top: 1px solid #eee;
 }
 .footer > .footer-social {
   max-width: 280px;
