--- a/src/css/More.scss
+++ b/src/css/More.scss
@@ -8,14 +8,13 @@
 
 .moreHed {
     font-size: 34px;
-    // margin-top: 10px;
-    // margin-bottom: 10px;
     cursor: pointer;
-    // border-top: 1px solid #333;
+   @extend .selection-disabled;
+    
     @media (max-width: $width-sm) {
         font-size: 32px;
     }
-}
+}    
 .moreHed:hover {
     color: blue;
     .arrow {
